// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`login renders correctly 1`] = `
Array [
  <input
    autoFocus={true}
    className="SearchInput"
    onTransitionEnd={[Function]}
    style={
      Object {
        "margin": 0,
        "padding": 0,
        "visibility": "hidden",
        "width": 0,
      }
    }
  />,
  <svg
    className="SearchToggle"
    height="24"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <title>
      ico__search
    </title>
    <path
      d="M22.658 21.28L17.9 16.522a9.558 9.558 0 1 0-1.424 1.4l4.768 4.768a1 1 0 1 0 1.414-1.414zM3.049 10.513a7.5 7.5 0 1 1 7.5 7.5 7.509 7.509 0 0 1-7.5-7.5z"
      fill="#fff"
    />
  </svg>,
  <a
    href="/auth/provider"
  >
    <button
      className="loginButton"
    >
      <span>
        Login
      </span>
    </button>
  </a>,
]
`;

exports[`logout renders correctly 1`] = `
Array [
  <input
    autoFocus={true}
    className="SearchInput"
    onTransitionEnd={[Function]}
    style={
      Object {
        "margin": 0,
        "padding": 0,
        "visibility": "hidden",
        "width": 0,
      }
    }
  />,
  <svg
    className="SearchToggle"
    height="24"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <title>
      ico__search
    </title>
    <path
      d="M22.658 21.28L17.9 16.522a9.558 9.558 0 1 0-1.424 1.4l4.768 4.768a1 1 0 1 0 1.414-1.414zM3.049 10.513a7.5 7.5 0 1 1 7.5 7.5 7.509 7.509 0 0 1-7.5-7.5z"
      fill="#fff"
    />
  </svg>,
  <div>
    <button
      className="initialsStyle"
    >
      
    </button>
    <a
      href="/logout"
    >
      <button
        className="logoutButton"
      >
        <span>
          Logout
        </span>
      </button>
    </a>
  </div>,
]
`;
